Fixed grid rows on mobile

--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ div#main h2{
   font-size: 1.875rem;
   line-height: 1.0667em;
   font-weight: 600;
-  margin-top: 6rem;
+  margin-top: 5rem;
   margin-bottom: 2.8rem;
   color: #fff;
 }
@@ -129,7 +129,7 @@ div#grid {
   display: grid;
   position: fixed;
   grid-template-columns: 0.2fr 1fr 1fr 47px 1fr 1fr 0.2fr;
-  grid-template-rows: 40px 40px 40px;
+  grid-template-rows: 72px;
   height: 100vh;
   margin: 25px;
 }
@@ -160,7 +160,7 @@ div#main {
   display: grid;
   grid-template-columns: 4fr;
   grid-column: 1 / span 7;
-  grid-row: 3;
+  grid-row: 2;
   overflow: scroll;
   height: 100vh;
 }
